; ModuleID = '/home/carl/AnghaBench/git/extr_merge-recursive.c_collision_find_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-recursive.c_collision_find_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.collision_entry = type { i8*, i32 }
%struct.hashmap = type { i32 }

@ent = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.collision_entry* (%struct.hashmap*, i8*)* @collision_find_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.collision_entry* @collision_find_entry(%struct.hashmap* %0, i8* %1) #0 {
  %3 = alloca %struct.hashmap*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.collision_entry, align 8
  store %struct.hashmap* %0, %struct.hashmap** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = getelementptr inbounds %struct.collision_entry, %struct.collision_entry* %5, i32 0, i32 1
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @strhash(i8* %7)
  %9 = call i32 @hashmap_entry_init(i32* %6, i32 %8)
  %10 = load i8*, i8** %4, align 8
  %11 = getelementptr inbounds %struct.collision_entry, %struct.collision_entry* %5, i32 0, i32 0
  store i8* %10, i8** %11, align 8
  %12 = load %struct.hashmap*, %struct.hashmap** %3, align 8
  %13 = load i32, i32* @ent, align 4
  %14 = call %struct.collision_entry* @hashmap_get_entry(%struct.hashmap* %12, %struct.collision_entry* %5, i32 %13, i32* null)
  ret %struct.collision_entry* %14
}

declare dso_local i32 @hashmap_entry_init(i32*, i32) #1

declare dso_local i32 @strhash(i8*) #1

declare dso_local %struct.collision_entry* @hashmap_get_entry(%struct.hashmap*, %struct.collision_entry*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
